[project]
name = "agentic-ai-langgraph-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.7",
    "langchain-google-genai>=4.2.0",
    "langgraph>=1.0.7",
    "notebook>=7.5.2",
    "python-dotenv>=1.2.1",
]
